--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.waylau.spring.boot.blog'
-version = '0.0.1-SNAPSHOT'
+version = '2.0'
 sourceCompatibility = '1.8'
 
 repositories {
