--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.thymeleaf.encoding=utf-8
 #使用H5标准
 spring.thymeleaf.mode=HTML5
 
+spring.datasource.url=jdbc:mysql://localhost/blog?characterEncoding=utf8&serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=mysql1029293806
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
